@@ -23,13 +23,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <docker.tag>latest</docker.tag>
 
-        <docker.java.image>openjdk:8-jdk-alpine</docker.java.image>
-
-        <veidemann.commons.version>0.3.10</veidemann.commons.version>
+        <veidemann.commons.version>0.3.11</veidemann.commons.version>
         <veidemann.rethinkdbadapter.version>0.3.15</veidemann.rethinkdbadapter.version>
 
         <log4j.version>2.7</log4j.version>
@@ -125,12 +123,17 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.13.0</version>
+            <version>2.27.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/jib/app/resources</directory>
+            </resource>
+        </resources>
         <plugins>
             <!-- Make version number available for application -->
             <plugin>
@@ -144,6 +147,24 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>1.3.0</version>
+                <configuration>
+                    <to>
+                        <image>docker.io/norsknettarkiv/${project.artifactId}</image>
+                        <tags>
+                            <tag>${docker.tag}</tag>
+                        </tags>
+                    </to>
+                    <container>
+                        <ports>
+                            <port>50051</port>
+                        </ports>
+                    </container>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -152,118 +173,36 @@
             <id>docker-build</id>
             <build>
                 <plugins>
-                    <!-- Create assembly with startup scripts and dependencies -->
                     <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>appassembler-maven-plugin</artifactId>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
                         <executions>
                             <execution>
                                 <phase>package</phase>
                                 <goals>
-                                    <goal>assemble</goal>
+                                    <goal>dockerBuild</goal>
                                 </goals>
                             </execution>
                         </executions>
-                        <configuration>
-                            <licenseHeaderFile>${basedir}/src/main/etc/license-header.txt</licenseHeaderFile>
-                            <programs>
-                                <program>
-                                    <mainClass>no.nb.nna.veidemann.controller.Main</mainClass>
-                                    <id>${project.artifactId}</id>
-                                </program>
-                            </programs>
-                            <binFolder>bin</binFolder>
-                            <repositoryName>lib</repositoryName>
-                            <repositoryLayout>flat</repositoryLayout>
-                            <useWildcardClassPath>true</useWildcardClassPath>
-                            <configurationDirectory>config</configurationDirectory>
-                            <endorsedDir>plugins</endorsedDir>
-                            <preAssembleDirectory>src/main/distfiles</preAssembleDirectory>
-                            <extraJvmArguments>-Dconfig.file=@BASEDIR@/config/application.conf
-                                -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
-                            </extraJvmArguments>
-                        </configuration>
                     </plugin>
-
-                    <!-- Build Docker image -->
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>docker-build-and-push</id>
+            <build>
+                <plugins>
                     <plugin>
-                        <groupId>io.fabric8</groupId>
-                        <artifactId>docker-maven-plugin</artifactId>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>docker-build</id>
                                 <phase>package</phase>
                                 <goals>
                                     <goal>build</goal>
                                 </goals>
                             </execution>
                         </executions>
-                        <configuration>
-                            <images>
-                                <image>
-                                    <name>norsknettarkiv/${project.artifactId}</name>
-                                    <alias>controller</alias>
-                                    <build>
-                                        <from>${docker.java.image}</from>
-                                        <maintainer>National Library of Norway</maintainer>
-                                        <tags>
-                                            <tag>${docker.tag}</tag>
-                                        </tags>
-                                        <runCmds>apk add --no-cache openssl libuuid</runCmds>
-
-                                        <ports>
-                                            <port>50051</port>
-                                        </ports>
-                                        <cmd>
-                                            <exec>
-                                                <arg>/veidemann/bin/start.sh</arg>
-                                            </exec>
-                                        </cmd>
-                                        <assembly>
-                                            <targetDir>/veidemann</targetDir>
-
-                                            <inline>
-                                                <includeBaseDirectory>true</includeBaseDirectory>
-                                                <fileSets>
-                                                    <fileSet>
-                                                        <directory>target/appassembler/bin</directory>
-                                                        <outputDirectory>bin</outputDirectory>
-                                                        <includes>
-                                                            <include>${project.artifactId}</include>
-                                                            <include>start.sh</include>
-                                                        </includes>
-                                                        <fileMode>0755</fileMode>
-                                                    </fileSet>
-                                                    <fileSet>
-                                                        <directory>target/appassembler/bin</directory>
-                                                        <outputDirectory>bin</outputDirectory>
-                                                        <excludes>
-                                                            <exclude>${project.artifactId}</exclude>
-                                                            <exclude>start.sh</exclude>
-                                                        </excludes>
-                                                        <fileMode>0644</fileMode>
-                                                    </fileSet>
-                                                    <fileSet>
-                                                        <directory>target/appassembler</directory>
-                                                        <outputDirectory>/</outputDirectory>
-                                                        <excludes>
-                                                            <exclude>bin</exclude>
-                                                        </excludes>
-                                                    </fileSet>
-                                                </fileSets>
-                                                <files>
-                                                    <file>
-                                                        <source>LICENSE</source>
-                                                        <outputDirectory>/</outputDirectory>
-                                                        <fileMode>0644</fileMode>
-                                                    </file>
-                                                </files>
-                                            </inline>
-                                        </assembly>
-                                    </build>
-                                </image>
-                            </images>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
